Tuned cartoon initial conditions so that there are 12 cartoon lunar orbits in one cartoon earth orbit
# 1.00.15 (50035) Mar 21, 2011
> 3/21/2011 Added improved measuring tape image and converted gravity-and-orbits to use it, see #2785
> Fixed: return object should account for the camera zoom
> Fixed: make the cartoon Earth/Moon force vector a bit smaller (1/2 grid cell)
> Brightened measuring tape color to make it easier to see
> Paused the sim after "return object" is pressed
# 1.00.14 (50024) Mar 21, 2011
> Changed the force scales in "cartoon" mode so that the initial force vector takes up 1/2 a grid cell
# 1.00.13 (50022) Mar 21, 2011
> Removed "Mass" checkbox from the Cartoon tab
# 1.00.12 (50018) Mar 21, 2011
> Fixed the gravity force scale for cartoon's first mode
# 1.00.11 (50016) Mar 21, 2011
> Renamed "intro" to "cartoon"
> Increased Earth mass in cartoon mode so the sun moves the same as it does in the second mode
# 1.00.10 (49888) Mar 16, 2011
> Start measuring tape in a less intuitive place, to see if that prompts students to move it
> Reworded "Restart" to "Reset"
# 1.00.09 (49854) Mar 16, 2011
> Only show the "return object" button if the object goes 12% outside of the bounds so the button doesn't flash on and off so often
Removed unused Scale strategy
Internal fixes: documentation, property refactoring, minor refactors
Fixed: Simulation crashes on startup on Mac 10.5 with Java 1.5, see #2771
Refactored teacher playback controls
# 1.00.08 (49543) Mar 6, 2011
Restore the moon near the earth and with the same relative velocity vector
Internationalized "Return Object"
# 1.00.07 (49537) Mar 5, 2011
Centered each mode in the center of momentum frame
# 1.00.06 (49535) Mar 5, 2011
Made earth the same size in sun/earth/moon mode as it is in sun/earth mode
Fixed: force vectors are too large in "intro" in sun/earth/moon mode
# 1.00.05 (49529) Mar 4, 2011
Fixed: the "to scale" tab should start in earth/satellite mode
# 1.00.04 (49527) Mar 4, 2011